@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 21;
+use Test::More tests => 17;
 use Test::Exception;
 use t::util;
 
@@ -9,34 +9,34 @@ use_ok('npg_pipeline::function::autoqc_archiver');
 local $ENV{NPG_CACHED_SAMPLESHEET_FILE} = q[t/data/samplesheet_1234.csv];
 
 my $util = t::util->new();
-my $analysis_runfolder_path = $util->analysis_runfolder_path();
-my $pbcal = $util->standard_analysis_recalibrated_path();
+
+my $rfh = $util->create_runfolder(undef, {'analysis_path' => 'BAM_basecalls_3445'});
+my $arpath = $rfh->{'archive_path'};
 
 {
-  $util->create_analysis();
-  my $aaq;
-  $util->create_run_info();
-
-  lives_ok { $aaq = npg_pipeline::function::autoqc_archiver->new(
-    run_folder     => q{123456_IL2_1234},
-    runfolder_path => $analysis_runfolder_path,
+  my $aqc_archiver = npg_pipeline::function::autoqc_archiver->new(
+    id_run         => 1234,
+    archive_path   => $arpath,
+    merge_lanes    => 0,
+    is_indexed     => 0,
     timestamp      => q{20090709-123456},
-  ); } q{created with run_folder ok};
-  isa_ok($aaq, q{npg_pipeline::function::autoqc_archiver});
+  );
+  isa_ok($aqc_archiver, q{npg_pipeline::function::autoqc_archiver});
 
-  my $da = $aaq->create();
+  my $da = $aqc_archiver->create();
   ok ($da && @{$da} == 1, 'an array with one definition is returned');
   my $d = $da->[0];
   isa_ok($d, q{npg_pipeline::function::definition});
 
   is ($d->created_by, q{npg_pipeline::function::autoqc_archiver},
     'created_by is correct');
-  is ($d->created_on, $aaq->timestamp, 'created_on is correct');
+  is ($d->created_on, $aqc_archiver->timestamp, 'created_on is correct');
   is ($d->identifier, 1234, 'identifier is set correctly');
   is ($d->job_name, q{autoqc_loader_1234_20090709-123456},
     'job_name is correct');
   is ($d->command,
-    qq{npg_qc_autoqc_data.pl --id_run=1234 --path=$pbcal/archive/qc},
+    qq{npg_qc_autoqc_data.pl --id_run 1234 --archive_path $arpath} .
+    q{ --lane 1 --lane 2 --lane 3 --lane 4 --lane 5 --lane 6 --lane 7 --lane 8},
     'command is correct');
   ok (!$d->has_composition, 'composition not set');
   ok (!$d->excluded, 'step not excluded');
@@ -45,30 +45,20 @@ my $pbcal = $util->standard_analysis_recalibrated_path();
   is ($d->queue, 'lowload', 'queue');
   is ($d->fs_slots_num, 1, 'one fs slot is set');
   lives_ok {$d->freeze()} 'definition can be serialized to JSON';
-}
 
-{
-  $util->create_multiplex_analysis({'qc_dir' => [2,3,5]});
-  my $command = q{npg_qc_autoqc_data.pl --id_run=1234};
-  $command .= qq{ --path=$pbcal/archive/qc};
-  for my $p ((2,3,5)) {
-    $command .= qq{ --path=$pbcal/archive/lane${p}/qc};
-  }
-
-  my $aaq = npg_pipeline::function::autoqc_archiver->new(
-    run_folder     => q{123456_IL2_1234},
-    runfolder_path => $analysis_runfolder_path,
+  $aqc_archiver = npg_pipeline::function::autoqc_archiver->new(
+    id_run         => 1234,
+    lanes          => [2,3],
+    archive_path   => $arpath,
+    merge_lanes    => 0,
+    is_indexed     => 0,
     timestamp      => q{20090709-123456},
-    is_indexed     => 1,
   );
-
-  my $da = $aaq->create();
-  ok ($da && @{$da} == 1, 'an array with one definition is returned');
-  my $d = $da->[0];
-  is ($d->job_name, 'autoqc_loader_1234_20090709-123456',
-    'job_name is correct');
-  is ($d->command, $command, 'command is correct');
-  is ($d->fs_slots_num, 1, 'one fs slot is set');
+  $da = $aqc_archiver->create();
+  is ($da->[0]->command,
+    qq{npg_qc_autoqc_data.pl --id_run 1234 --archive_path $arpath} .
+    q{ --lane 2 --lane 3},
+    'command is correct');
 }
 
 1;
